# prbr25

./: .gitignore  README.md  pyproject.toml
src/prbr25/: config.py  main.py
src/prbr25/consolidate/: entrant.py  events.py  matches.py  merge.py  pandas_utils.py  standings.py
src/prbr25/exceptions/: exit_player_validation.py
src/prbr25/ui/: create_players.py  generate_report.py  main_menu.py  merge_players.py  not_yet_implemented.py  tournament_tier.py  upload_tournament.py  utils.py  validate_events.py  validate_players.py
