[project]
name = "prbr25"
version = "0.1.0"
description = ""
authors = [{ name = "Gabriel Medeiros", email = "gabrielspmedeiros@gmail.com" }]
readme = "README.md"
requires-python = "3.12.2"
dependencies = [
    "inquirerpy (>=0.3.4,<0.4.0)",
    "startgg-queries @ git+https://github.com/GabrielSPMed/prbr25-startgg-queries.git",
    "dotenv (>=0.9.9,<0.10.0)",
]

[tool.poetry]
packages = [{ include = "prbr25", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
